Add Bomber and Recon subclasses to Aircraft.