@@ -2,13 +2,12 @@ package engima.waratsea.model.squadron.configuration;
 
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
+import engima.waratsea.model.base.airfield.AirfieldType;
 import engima.waratsea.model.base.airfield.mission.AirMissionType;
 import engima.waratsea.model.base.airfield.mission.MissionRole;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -20,29 +19,37 @@ public class SquadronConfigRules {
     private final Map<MissionRole, Set<SquadronConfig>> dropTankRules = new HashMap<>();
     private final Map<AirMissionType, Set<SquadronConfig>> leanEngineRules = new HashMap<>();
 
+    private final Map<AirfieldType, Set<SquadronConfig>> strippedDownRules = new HashMap<>();
+
     /**
      * The constructor called by guice.
      */
     @Inject
     public SquadronConfigRules() {
-        dropTankRules.put(MissionRole.ESCORT, new HashSet<>(Arrays.asList(SquadronConfig.NONE, SquadronConfig.DROP_TANKS)));
-        dropTankRules.put(MissionRole.MAIN, new HashSet<>(Collections.singletonList(SquadronConfig.NONE)));
+        dropTankRules.put(MissionRole.ESCORT, Set.of(SquadronConfig.NONE, SquadronConfig.DROP_TANKS));
+        dropTankRules.put(MissionRole.MAIN, Set.of(SquadronConfig.NONE));
 
-        leanEngineRules.put(AirMissionType.FERRY, new HashSet<>(Arrays.asList(SquadronConfig.NONE, SquadronConfig.LEAN_ENGINE)));
-        leanEngineRules.put(AirMissionType.LAND_STRIKE, new HashSet<>(Arrays.asList(SquadronConfig.NONE, SquadronConfig.LEAN_ENGINE)));
+        leanEngineRules.put(AirMissionType.FERRY, Set.of(SquadronConfig.NONE, SquadronConfig.LEAN_ENGINE));
+        leanEngineRules.put(AirMissionType.LAND_STRIKE, Set.of(SquadronConfig.NONE, SquadronConfig.LEAN_ENGINE));
+
+        strippedDownRules.put(AirfieldType.TASKFORCE, Set.of(SquadronConfig.NONE, SquadronConfig.DROP_TANKS, SquadronConfig.STRIPPED_DOWN));
     }
 
     /**
      * Determine which squadron configuration are allowed for the given mission type and mission role of
      * the squadron.
      *
+     * @param airfieldType The type of airfield: Land, Seaplane, Carrier, etc...
      * @param missionType The mission type.
      * @param role The squadron role.
      * @return A set of allowed squadron configurations given the mission type and mission role.
      */
-    public Set<SquadronConfig> getAllowed(final AirMissionType missionType, final MissionRole role) {
+    public Set<SquadronConfig> getAllowed(final AirfieldType airfieldType, final AirMissionType missionType, final MissionRole role) {
         return Stream
-                .concat(getAllowed(missionType).stream(), getAllowed(role).stream())
+                .of(getAllowed(missionType),
+                        getAllowed(role),
+                        getAllowed(airfieldType, missionType))
+                .flatMap(Collection::stream)
                 .collect(Collectors.toSet());
     }
 
@@ -53,7 +60,7 @@ public class SquadronConfigRules {
      * @return A set of the allowed squadron configurations given the squadron's role.
      */
     private Set<SquadronConfig> getAllowed(final MissionRole role) {
-        return dropTankRules.getOrDefault(role, new HashSet<>(Collections.singletonList(SquadronConfig.NONE)));
+        return dropTankRules.getOrDefault(role, Set.of(SquadronConfig.NONE));
     }
 
     /**
@@ -63,6 +70,22 @@ public class SquadronConfigRules {
      * @return A set of the allowed squadron configurations given the type of mission.
      */
     private Set<SquadronConfig> getAllowed(final AirMissionType missionType) {
-        return leanEngineRules.getOrDefault(missionType, new HashSet<>(Collections.singletonList(SquadronConfig.NONE)));
+        return leanEngineRules.getOrDefault(missionType, Set.of(SquadronConfig.NONE));
+    }
+
+    /**
+     * Get the allowed squadron configuration for the given airfield type and mission type.
+     *
+     * @param airfieldType The type of mission that the squadron is assigned.
+     * @param missionType The squadron role.
+     * @return A set of the allowed squadron configurations given the type of mission and type of airfield.
+     */
+    private Set<SquadronConfig> getAllowed(final AirfieldType airfieldType, final AirMissionType missionType) {
+        if (missionType != AirMissionType.FERRY) {
+            return Set.of(SquadronConfig.NONE);
+        }
+
+        return strippedDownRules.getOrDefault(airfieldType, Set.of(SquadronConfig.NONE));
+
     }
 }
